gitops/apps/aligner-api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aligner-api
  labels:
    app.kubernetes.io/name: aligner-api
    app.kubernetes.io/part-of: aligner
    app.kubernetes.io/component: api
spec:
  selector:
    app.kubernetes.io/name: aligner-api
  ports:
    - name: http
      port: 8080
      targetPort: http
