gitops/apps/aligner-api/base/allow-data.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: aligner-api-allow-data
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: aligner-api
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: aligner-data
          podSelector:
            matchLabels:
              cnpg.io/cluster: aligner-db
      ports:
        - protocol: TCP
          port: 5432
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: aligner-data
          podSelector:
            matchLabels:
              app.kubernetes.io/name: redis
      ports:
        - protocol: TCP
          port: 6379
